fix building issue